Adding compser/package json files and locks, updated .env added other misc files

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ WARDEN_REDIS=1
 ## Laravel Config
 APP_NAME=Default
 APP_URL=http://app.local.dev
-APP_KEY=base64:yUktWGdACIqvXW7yXm+9NSa3YjQ+9wW6s3ozppw5Qgs=
+APP_KEY=
 
 APP_ENV=local
 APP_DEBUG=true
